# cicada

./: .gitignore  Cargo.toml
config/: database.default.json  email.default.json  notifications.default.json  system.default.json
src/: main.rs
src/common/: Cargo.toml
src/common/src/: lib.rs
src/common/src/crypto/: base64.rs  hash.rs  mod.rs  password.rs  random.rs
src/common/src/error/: mod.rs
src/common/src/files/: json_file.rs  mod.rs  text_file.rs  toml_file.rs
src/common/src/state/: config_database.rs  config_email.rs  mod.rs
src/common/src/state/config_notifications/: email.rs  mod.rs  slack.rs
src/common/src/state/config_system/: cache.rs  logs.rs  mod.rs  updates.rs  users.rs
src/common/src/state/enums/: email_encryption.rs  mod.rs  notifications_events.rs  system_log.rs
src/controllers/: Cargo.toml
src/controllers/src/: auth.rs  lib.rs  users.rs
src/core/: Cargo.toml
src/core/src/: extractors.rs  lib.rs
src/core/src/middleware/: auth.rs
src/core/src/routes/: mod.rs  system.rs  user.rs
src/database/: Cargo.toml
src/database/migrations/2021-12-30-224319_create_users/: up.sql
src/database/migrations/2022-01-01-235658_create_auth_login/: down.sql  up.sql
src/database/migrations/2022-01-01-235710_create_auth_attempts/: down.sql  up.sql
src/database/migrations/2022-01-08-153906_user_security/: down.sql  up.sql
src/database/migrations/2022-01-16-164849_create_user_notifications/: down.sql  up.sql
src/database/migrations/2022-01-16-170818_add_column_2fa_to_auth_login/: down.sql  up.sql
src/database/src/: lib.rs  schema.rs
src/database/src/models/: headers.rs  login.rs  mod.rs  user_security.rs  users.rs
src/database/src/models/auth/: attempts.rs  login.rs  login_form.rs  mod.rs
src/database/src/models/users/: change_password.rs  mod.rs  new.rs  notifications.rs  token.rs  update.rs
src/routes/: mod.rs  system.rs
src/system/: Cargo.toml
src/system/src/: auth.rs  lib.rs
templates/: index.j2
templates/common/: main.j2
testfiles/: system_config.json
