[package]
name = "cicada"
version = "0.1.0"
edition = "2021"

[workspace]
resolver = "2"
members = [
    "src/common",
    "src/core",
    "src/system"
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
cicada-core = { path = "./src/core" }
