[package]
name = "cicada-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.3.2"
tera = "1.15.0"
serde = "1.0.130"
serde_json = "1.0.68"
cicada-common = { path = "./../common" }
cicada-system = { path = "./../system" }
