[package]
name = "cicada-database"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.14"
uuid = { version = "0.8.2", features = ["serde", "v4"] }
diesel = { version = "1.4.8", features = ["postgres", "r2d2", "uuidv07", "chrono"] }
diesel_migrations = "1.4.0"
chrono = { version = "0.4.19", features = ["serde"] }
serde = "1.0.130"
