[package]
name = "cicada-system"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.3.2"
actix-files = "0.5.0"
serde = "1.0.130"
serde_json = "1.0.68"
log = "0.4.14"
cicada-common = { path = "./../common" }
